Correct sizing issues on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,18 @@ a {
     padding-bottom: 2em;
 }
 
+@media (max-width: 450px) {
+
+    body{
+        line-height: 125%;
+    }
+
+    li {
+        padding: .25rem 0;
+    }
+    
+}
+
 footer{
     text-align: center;
     padding-bottom: 1em;
